--- a/Element1.html
+++ b/Element1.html
@@ -10,14 +10,16 @@
         <li><a href="index.html">Главная</a></li>
         <li><a href="Element1.html">Страница 1</a></li>
         <li><a href="Element2.html">Страница 2</a></li>
-        <li><a href="#">Страница 3</a></li>
-        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
     <div class="content">
       <p class="header_class">Название элемента каталога</p>
       <p class="header_class_small">Описание товара (проекта)</p>
-        <img src="pics\tovar.png" alt="tovar pic">
+        <div class="gallery">
+          <img src="pics\tovar.png" alt="tovar pic" class="gallery_item">
+          <img src="pics\tovar11.png" alt="tovar pic 1" class="gallery_item">
+          <img src="pics\tovar12.png" alt="tovar pic 2" class="gallery_item">
+        </div>
         <p class="text">Текст краткого описания элемента каталога</p>
       <p class="header_class_small">Характеристики товара</p>
         <p class="text">Текст характеристик товара, который вы выбрали</p>
