--- a/Element2.html
+++ b/Element2.html
@@ -10,18 +10,20 @@
         <li><a href="index.html">Главная</a></li>
         <li><a href="Element1.html">Страница 1</a></li>
         <li><a href="Element2.html">Страница 2</a></li>
-        <li><a href="#">Страница 3</a></li>
-        <li><a href="#">Контакты</a></li>
       </ul>
     </nav>
     <div class="content">
       <p class="header_class">Название элемента каталога 2</p>
       <p class="header_class_small">Описание товара (проекта) 2</p>
-        <img src="pics\tovar2.png" alt="tovar pic 2">
+        <div class="gallery">
+          <img src="pics\tovar2.png" alt="tovar pic" class="gallery_item">
+          <img src="pics\tovar21.png" alt="tovar pic 1" class="gallery_item">
+          <img src="pics\tovar22.png" alt="tovar pic 2" class="gallery_item">
+        </div>
         <p class="text">Текст краткого описания элемента каталога 2</p>
-      <p class="header_class_small">Характеристики товара 2</p>
+        <p class="header_class_small">Характеристики товара 2</p>
         <p class="text">Текст характеристик товара, который вы выбрали 2</p>
-      <p class="header_class_small">Подробное описание товара 2</p>
+        <p class="header_class_small">Подробное описание товара 2</p>
         <p class="text">Текст подробного описания товара 2</p>
       <div class="d_footer">
         <hr>
