--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <nav class="two">
+      <nav class="menu">
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="Element1.html">Страница 1</a></li>
