--- a/Element2.html
+++ b/Element2.html
@@ -5,7 +5,7 @@
   </head>
   <body>
 
-    <nav class="two">
+    <nav class="menu">
       <ul>
         <li><a href="index.html">Главная</a></li>
         <li><a href="Element1.html">Страница 1</a></li>
