--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
           <li><a href="index.html">Главная</a></li>
           <li><a href="Element1.html">Страница 1</a></li>
           <li><a href="Element2.html">Страница 2</a></li>
+          <li><a href="grid.html">Гриды</a></li>
         </ul>
       </nav>
       <div class="content">
